compiladorCminus/cminus-ply/cminus/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_seq
Rule 2     declaration_seq -> declaration declaration_seq
Rule 3     declaration_seq -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> ID LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
Rule 6     declaration -> type_specifier ID LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
Rule 7     var_declaration -> type_specifier var_spec_seq SEMI
Rule 8     var_specifier -> ID
Rule 9     var_specifier -> ID ASSIGN literal
Rule 10    var_specifier -> ID LBRACKET NUM RBRACKET
Rule 11    var_specifier -> ID LBRACKET NUM RBRACKET ASSIGN LBRACKET literal_seq RBRACKET
Rule 12    type_specifier -> INT
Rule 13    type_specifier -> STRING
Rule 14    type_specifier -> BOOL
Rule 15    type_specifier -> VOID
Rule 16    param -> type_specifier ID
Rule 17    param -> type_specifier ID LBRACKET RBRACKET
Rule 18    compound_stmt -> var_declaration_list statement_list
Rule 19    statement -> if_stmt
Rule 20    statement -> while_stmt
Rule 21    statement -> for_stmt
Rule 22    statement -> break_stmt SEMI
Rule 23    statement -> return_stmt SEMI
Rule 24    statement -> read_stmt SEMI
Rule 25    statement -> write_stmt SEMI
Rule 26    statement -> assign SEMI
Rule 27    statement -> sub_call SEMI
Rule 28    if_stmt -> IF LPAREN expression RPAREN statement
Rule 29    if_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 30    if_stmt -> IF LPAREN expression RPAREN LBRACE compound_stmt RBRACE
Rule 31    if_stmt -> IF LPAREN expression RPAREN LBRACE compound_stmt RBRACE ELSE LBRACE compound_stmt RBRACE
Rule 32    while_stmt -> WHILE LPAREN expression RPAREN LBRACE compound_stmt RBRACE
Rule 33    for_stmt -> FOR LPAREN assign SEMI expression SEMI assign RPAREN LBRACE compound_stmt RBRACE
Rule 34    break_stmt -> BREAK
Rule 35    read_stmt -> READ variable
Rule 36    write_stmt -> WRITE expression_list
Rule 37    return_stmt -> RETURN
Rule 38    return_stmt -> RETURN expression
Rule 39    sub_call -> ID LPAREN expression_list RPAREN
Rule 40    assign -> variable ASSIGN expression
Rule 41    assign -> variable PLUSASG expression
Rule 42    assign -> variable MINUSASG expression
Rule 43    assign -> variable TIMESASG expression
Rule 44    assign -> variable DIVASG expression
Rule 45    assign -> variable MODASG expression
Rule 46    variable -> ID
Rule 47    variable -> ID LBRACKET expression RBRACKET
Rule 48    expression -> expression PLUS expression
Rule 49    expression -> expression MINUS expression
Rule 50    expression -> expression TIMES expression
Rule 51    expression -> expression DIV expression
Rule 52    expression -> expression MOD expression
Rule 53    expression -> expression EQ expression
Rule 54    expression -> expression NEQ expression
Rule 55    expression -> expression NGT expression
Rule 56    expression -> expression NLT expression
Rule 57    expression -> expression GT expression
Rule 58    expression -> expression LT expression
Rule 59    expression -> expression AND expression
Rule 60    expression -> expression OR expression
Rule 61    expression -> NOT expression
Rule 62    expression -> SIGN expression
Rule 63    expression -> expression TERNARYIF expression TERNARYIFNOT expression
Rule 64    expression -> sub_call
Rule 65    expression -> variable
Rule 66    expression -> literal
Rule 67    expression -> LPAREN expression RPAREN
Rule 68    expression -> param
Rule 69    literal -> NUM
Rule 70    literal -> CHAIN
Rule 71    literal -> TRUE
Rule 72    literal -> FALSE
Rule 73    param_list -> param_seq
Rule 74    param_list -> VOID
Rule 75    param_list -> empty
Rule 76    param_seq -> param COMMA param_seq
Rule 77    param_seq -> param
Rule 78    var_declaration_list -> var_declaration var_declaration_list
Rule 79    var_declaration_list -> empty
Rule 80    var_spec_seq -> var_specifier COMMA var_spec_seq
Rule 81    var_spec_seq -> var_specifier
Rule 82    expression_list -> expression_seq
Rule 83    expression_list -> empty
Rule 84    literal_seq -> literal COMMA literal_seq
Rule 85    literal_seq -> literal
Rule 86    statement_list -> statement statement_list
Rule 87    statement_list -> empty
Rule 88    expression_seq -> expression COMMA expression_seq
Rule 89    expression_seq -> expression
Rule 90    empty -> <empty>

Terminals, with rules where they appear

AND                  : 59
ASSIGN               : 9 11 40
BOOL                 : 14
BREAK                : 34
CHAIN                : 70
COMMA                : 76 80 84 88
DIV                  : 51
DIVASG               : 44
ELSE                 : 29 31
EQ                   : 53
FALSE                : 72
FOR                  : 33
GT                   : 57
ID                   : 5 6 8 9 10 11 16 17 39 46 47
IF                   : 28 29 30 31
INT                  : 12
LBRACE               : 5 6 30 31 31 32 33
LBRACKET             : 10 11 11 17 47
LPAREN               : 5 6 28 29 30 31 32 33 39 67
LT                   : 58
MINUS                : 49
MINUSASG             : 42
MOD                  : 52
MODASG               : 45
NEQ                  : 54
NGT                  : 55
NLT                  : 56
NOT                  : 61
NUM                  : 10 11 69
OR                   : 60
PLUS                 : 48
PLUSASG              : 41
RBRACE               : 5 6 30 31 31 32 33
RBRACKET             : 10 11 11 17 47
READ                 : 35
RETURN               : 37 38
RPAREN               : 5 6 28 29 30 31 32 33 39 67
SEMI                 : 7 22 23 24 25 26 27 33 33
SIGN                 : 62
STRING               : 13
TERNARYIF            : 63
TERNARYIFNOT         : 63
TIMES                : 50
TIMESASG             : 43
TRUE                 : 71
VOID                 : 15 74
WHILE                : 32
WRITE                : 36
error                : 

Nonterminals, with rules where they appear

assign               : 26 33 33
break_stmt           : 22
compound_stmt        : 5 6 30 31 31 32 33
declaration          : 2 3
declaration_seq      : 1 2
empty                : 75 79 83 87
expression           : 28 29 30 31 32 33 38 40 41 42 43 44 45 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 62 63 63 63 67 88 89
expression_list      : 36 39
expression_seq       : 82 88
for_stmt             : 21
if_stmt              : 19
literal              : 9 66 84 85
literal_seq          : 11 84
param                : 68 76 77
param_list           : 5 6
param_seq            : 73 76
program              : 0
read_stmt            : 24
return_stmt          : 23
statement            : 28 29 29 86
statement_list       : 18 86
sub_call             : 27 64
type_specifier       : 6 7 16 17
var_declaration      : 4 78
var_declaration_list : 18 78
var_spec_seq         : 7 80
var_specifier        : 80 81
variable             : 35 40 41 42 43 44 45 65
while_stmt           : 20
write_stmt           : 25

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_seq
    (2) declaration_seq -> . declaration declaration_seq
    (3) declaration_seq -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . ID LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
    (6) declaration -> . type_specifier ID LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
    (7) var_declaration -> . type_specifier var_spec_seq SEMI
    (12) type_specifier -> . INT
    (13) type_specifier -> . STRING
    (14) type_specifier -> . BOOL
    (15) type_specifier -> . VOID

    ID              shift and go to state 5
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    VOID            shift and go to state 10

    program                        shift and go to state 1
    declaration_seq                shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_seq .

    $end            reduce using rule 1 (program -> declaration_seq .)


state 3

    (2) declaration_seq -> declaration . declaration_seq
    (3) declaration_seq -> declaration .
    (2) declaration_seq -> . declaration declaration_seq
    (3) declaration_seq -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . ID LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
    (6) declaration -> . type_specifier ID LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
    (7) var_declaration -> . type_specifier var_spec_seq SEMI
    (12) type_specifier -> . INT
    (13) type_specifier -> . STRING
    (14) type_specifier -> . BOOL
    (15) type_specifier -> . VOID

    $end            reduce using rule 3 (declaration_seq -> declaration .)
    ID              shift and go to state 5
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    VOID            shift and go to state 10

    declaration                    shift and go to state 3
    declaration_seq                shift and go to state 11
    var_declaration                shift and go to state 4
    type_specifier                 shift and go to state 6

state 4

    (4) declaration -> var_declaration .

    ID              reduce using rule 4 (declaration -> var_declaration .)
    INT             reduce using rule 4 (declaration -> var_declaration .)
    STRING          reduce using rule 4 (declaration -> var_declaration .)
    BOOL            reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> ID . LPAREN param_list RPAREN LBRACE compound_stmt RBRACE

    LPAREN          shift and go to state 12


state 6

    (6) declaration -> type_specifier . ID LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
    (7) var_declaration -> type_specifier . var_spec_seq SEMI
    (80) var_spec_seq -> . var_specifier COMMA var_spec_seq
    (81) var_spec_seq -> . var_specifier
    (8) var_specifier -> . ID
    (9) var_specifier -> . ID ASSIGN literal
    (10) var_specifier -> . ID LBRACKET NUM RBRACKET
    (11) var_specifier -> . ID LBRACKET NUM RBRACKET ASSIGN LBRACKET literal_seq RBRACKET

    ID              shift and go to state 13

    var_spec_seq                   shift and go to state 14
    var_specifier                  shift and go to state 15

state 7

    (12) type_specifier -> INT .

    ID              reduce using rule 12 (type_specifier -> INT .)


state 8

    (13) type_specifier -> STRING .

    ID              reduce using rule 13 (type_specifier -> STRING .)


state 9

    (14) type_specifier -> BOOL .

    ID              reduce using rule 14 (type_specifier -> BOOL .)


state 10

    (15) type_specifier -> VOID .

    ID              reduce using rule 15 (type_specifier -> VOID .)


state 11

    (2) declaration_seq -> declaration declaration_seq .

    $end            reduce using rule 2 (declaration_seq -> declaration declaration_seq .)


state 12

    (5) declaration -> ID LPAREN . param_list RPAREN LBRACE compound_stmt RBRACE
    (73) param_list -> . param_seq
    (74) param_list -> . VOID
    (75) param_list -> . empty
    (76) param_seq -> . param COMMA param_seq
    (77) param_seq -> . param
    (90) empty -> .
    (16) param -> . type_specifier ID
    (17) param -> . type_specifier ID LBRACKET RBRACKET
    (12) type_specifier -> . INT
    (13) type_specifier -> . STRING
    (14) type_specifier -> . BOOL
    (15) type_specifier -> . VOID

    VOID            shift and go to state 18
    RPAREN          reduce using rule 90 (empty -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    param_list                     shift and go to state 16
    param_seq                      shift and go to state 17
    empty                          shift and go to state 19
    param                          shift and go to state 20
    type_specifier                 shift and go to state 21

state 13

    (6) declaration -> type_specifier ID . LPAREN param_list RPAREN LBRACE compound_stmt RBRACE
    (8) var_specifier -> ID .
    (9) var_specifier -> ID . ASSIGN literal
    (10) var_specifier -> ID . LBRACKET NUM RBRACKET
    (11) var_specifier -> ID . LBRACKET NUM RBRACKET ASSIGN LBRACKET literal_seq RBRACKET

    LPAREN          shift and go to state 22
    COMMA           reduce using rule 8 (var_specifier -> ID .)
    SEMI            reduce using rule 8 (var_specifier -> ID .)
    ASSIGN          shift and go to state 23
    LBRACKET        shift and go to state 24


state 14

    (7) var_declaration -> type_specifier var_spec_seq . SEMI

    SEMI            shift and go to state 25


state 15

    (80) var_spec_seq -> var_specifier . COMMA var_spec_seq
    (81) var_spec_seq -> var_specifier .

    COMMA           shift and go to state 26
    SEMI            reduce using rule 81 (var_spec_seq -> var_specifier .)


state 16

    (5) declaration -> ID LPAREN param_list . RPAREN LBRACE compound_stmt RBRACE

    RPAREN          shift and go to state 27


state 17

    (73) param_list -> param_seq .

    RPAREN          reduce using rule 73 (param_list -> param_seq .)


state 18

    (74) param_list -> VOID .
    (15) type_specifier -> VOID .

    RPAREN          reduce using rule 74 (param_list -> VOID .)
    ID              reduce using rule 15 (type_specifier -> VOID .)


state 19

    (75) param_list -> empty .

    RPAREN          reduce using rule 75 (param_list -> empty .)


state 20

    (76) param_seq -> param . COMMA param_seq
    (77) param_seq -> param .

    COMMA           shift and go to state 28
    RPAREN          reduce using rule 77 (param_seq -> param .)


state 21

    (16) param -> type_specifier . ID
    (17) param -> type_specifier . ID LBRACKET RBRACKET

    ID              shift and go to state 29


state 22

    (6) declaration -> type_specifier ID LPAREN . param_list RPAREN LBRACE compound_stmt RBRACE
    (73) param_list -> . param_seq
    (74) param_list -> . VOID
    (75) param_list -> . empty
    (76) param_seq -> . param COMMA param_seq
    (77) param_seq -> . param
    (90) empty -> .
    (16) param -> . type_specifier ID
    (17) param -> . type_specifier ID LBRACKET RBRACKET
    (12) type_specifier -> . INT
    (13) type_specifier -> . STRING
    (14) type_specifier -> . BOOL
    (15) type_specifier -> . VOID

    VOID            shift and go to state 18
    RPAREN          reduce using rule 90 (empty -> .)
    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9

    type_specifier                 shift and go to state 21
    param_list                     shift and go to state 30
    param_seq                      shift and go to state 17
    empty                          shift and go to state 19
    param                          shift and go to state 20

state 23

    (9) var_specifier -> ID ASSIGN . literal
    (69) literal -> . NUM
    (70) literal -> . CHAIN
    (71) literal -> . TRUE
    (72) literal -> . FALSE

    NUM             shift and go to state 32
    CHAIN           shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35

    literal                        shift and go to state 31

state 24

    (10) var_specifier -> ID LBRACKET . NUM RBRACKET
    (11) var_specifier -> ID LBRACKET . NUM RBRACKET ASSIGN LBRACKET literal_seq RBRACKET

    NUM             shift and go to state 36


state 25

    (7) var_declaration -> type_specifier var_spec_seq SEMI .

    ID              reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    INT             reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    STRING          reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    BOOL            reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    VOID            reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    $end            reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    IF              reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    WHILE           reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    FOR             reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    BREAK           reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    RETURN          reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    READ            reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    WRITE           reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)
    RBRACE          reduce using rule 7 (var_declaration -> type_specifier var_spec_seq SEMI .)


state 26

    (80) var_spec_seq -> var_specifier COMMA . var_spec_seq
    (80) var_spec_seq -> . var_specifier COMMA var_spec_seq
    (81) var_spec_seq -> . var_specifier
    (8) var_specifier -> . ID
    (9) var_specifier -> . ID ASSIGN literal
    (10) var_specifier -> . ID LBRACKET NUM RBRACKET
    (11) var_specifier -> . ID LBRACKET NUM RBRACKET ASSIGN LBRACKET literal_seq RBRACKET

    ID              shift and go to state 38

    var_specifier                  shift and go to state 15
    var_spec_seq                   shift and go to state 37

state 27

    (5) declaration -> ID LPAREN param_list RPAREN . LBRACE compound_stmt RBRACE

    LBRACE          shift and go to state 39


state 28

    (76) param_seq -> param COMMA . param_seq
    (76) param_seq -> . param COMMA param_seq
    (77) param_seq -> . param
    (16) param -> . type_specifier ID
    (17) param -> . type_specifier ID LBRACKET RBRACKET
    (12) type_specifier -> . INT
    (13) type_specifier -> . STRING
    (14) type_specifier -> . BOOL
    (15) type_specifier -> . VOID

    INT             shift and go to state 7
    STRING          shift and go to state 8
    BOOL            shift and go to state 9
    VOID            shift and go to state 10

    param                          shift and go to state 20
    param_seq                      shift and go to state 40
    type_specifier                 shift and go to state 21

state 29

    (16) param -> type_specifier ID .
    (17) param -> type_specifier ID . LBRACKET RBRACKET

    COMMA           reduce using rule 16 (param -> type_specifier ID .)
    RPAREN          reduce using rule 16 (param -> type_specifier ID .)
    PLUS            reduce using rule 16 (param -> type_specifier ID .)
    MINUS           reduce using rule 16 (param -> type_specifier ID .)
    TIMES           reduce using rule 16 (param -> type_specifier ID .)
    DIV             reduce using rule 16 (param -> type_specifier ID .)
    MOD             reduce using rule 16 (param -> type_specifier ID .)
    EQ              reduce using rule 16 (param -> type_specifier ID .)
    NEQ             reduce using rule 16 (param -> type_specifier ID .)
    NGT             reduce using rule 16 (param -> type_specifier ID .)
    NLT             reduce using rule 16 (param -> type_specifier ID .)
    GT              reduce using rule 16 (param -> type_specifier ID .)
    LT              reduce using rule 16 (param -> type_specifier ID .)
    AND             reduce using rule 16 (param -> type_specifier ID .)
    OR              reduce using rule 16 (param -> type_specifier ID .)
    TERNARYIF       reduce using rule 16 (param -> type_specifier ID .)
    SEMI            reduce using rule 16 (param -> type_specifier ID .)
    RBRACKET        reduce using rule 16 (param -> type_specifier ID .)
    TERNARYIFNOT    reduce using rule 16 (param -> type_specifier ID .)
    LBRACKET        shift and go to state 41


state 30

    (6) declaration -> type_specifier ID LPAREN param_list . RPAREN LBRACE compound_stmt RBRACE

    RPAREN          shift and go to state 42


state 31

    (9) var_specifier -> ID ASSIGN literal .

    COMMA           reduce using rule 9 (var_specifier -> ID ASSIGN literal .)
    SEMI            reduce using rule 9 (var_specifier -> ID ASSIGN literal .)


state 32

    (69) literal -> NUM .

    COMMA           reduce using rule 69 (literal -> NUM .)
    SEMI            reduce using rule 69 (literal -> NUM .)
    PLUS            reduce using rule 69 (literal -> NUM .)
    MINUS           reduce using rule 69 (literal -> NUM .)
    TIMES           reduce using rule 69 (literal -> NUM .)
    DIV             reduce using rule 69 (literal -> NUM .)
    MOD             reduce using rule 69 (literal -> NUM .)
    EQ              reduce using rule 69 (literal -> NUM .)
    NEQ             reduce using rule 69 (literal -> NUM .)
    NGT             reduce using rule 69 (literal -> NUM .)
    NLT             reduce using rule 69 (literal -> NUM .)
    GT              reduce using rule 69 (literal -> NUM .)
    LT              reduce using rule 69 (literal -> NUM .)
    AND             reduce using rule 69 (literal -> NUM .)
    OR              reduce using rule 69 (literal -> NUM .)
    TERNARYIF       reduce using rule 69 (literal -> NUM .)
    RBRACKET        reduce using rule 69 (literal -> NUM .)
    RPAREN          reduce using rule 69 (literal -> NUM .)
    TERNARYIFNOT    reduce using rule 69 (literal -> NUM .)


state 33

    (70) literal -> CHAIN .

    COMMA           reduce using rule 70 (literal -> CHAIN .)
    SEMI            reduce using rule 70 (literal -> CHAIN .)
    PLUS            reduce using rule 70 (literal -> CHAIN .)
    MINUS           reduce using rule 70 (literal -> CHAIN .)
    TIMES           reduce using rule 70 (literal -> CHAIN .)
    DIV             reduce using rule 70 (literal -> CHAIN .)
    MOD             reduce using rule 70 (literal -> CHAIN .)
    EQ              reduce using rule 70 (literal -> CHAIN .)
    NEQ             reduce using rule 70 (literal -> CHAIN .)
    NGT             reduce using rule 70 (literal -> CHAIN .)
    NLT             reduce using rule 70 (literal -> CHAIN .)
    GT              reduce using rule 70 (literal -> CHAIN .)
    LT              reduce using rule 70 (literal -> CHAIN .)
    AND             reduce using rule 70 (literal -> CHAIN .)
    OR              reduce using rule 70 (literal -> CHAIN .)
    TERNARYIF       reduce using rule 70 (literal -> CHAIN .)
    RBRACKET        reduce using rule 70 (literal -> CHAIN .)
    RPAREN          reduce using rule 70 (literal -> CHAIN .)
    TERNARYIFNOT    reduce using rule 70 (literal -> CHAIN .)


state 34

    (71) literal -> TRUE .

    COMMA           reduce using rule 71 (literal -> TRUE .)
    SEMI            reduce using rule 71 (literal -> TRUE .)
    PLUS            reduce using rule 71 (literal -> TRUE .)
    MINUS           reduce using rule 71 (literal -> TRUE .)
    TIMES           reduce using rule 71 (literal -> TRUE .)
    DIV             reduce using rule 71 (literal -> TRUE .)
    MOD             reduce using rule 71 (literal -> TRUE .)
    EQ              reduce using rule 71 (literal -> TRUE .)
    NEQ             reduce using rule 71 (literal -> TRUE .)
    NGT             reduce using rule 71 (literal -> TRUE .)
    NLT             reduce using rule 71 (literal -> TRUE .)
    GT              reduce using rule 71 (literal -> TRUE .)
    LT              reduce using rule 71 (literal -> TRUE .)
    AND             reduce using rule 71 (literal -> TRUE .)
    OR              reduce using rule 71 (literal -> TRUE .)
    TERNARYIF       reduce using rule 71 (literal -> TRUE .)
    RBRACKET        reduce using rule 71 (literal -> TRUE .)
    RPAREN          reduce using rule 71 (literal -> TRUE .)
    TERNARYIFNOT    reduce using rule 71 (literal -> TRUE .)


state 35

    (72) literal -> FALSE .

    COMMA           reduce using rule 72 (literal -> FALSE .)
    SEMI            reduce using rule 72 (literal -> FALSE .)
    PLUS            reduce using rule 72 (literal -> FALSE .)
    MINUS           reduce using rule 72 (literal -> FALSE .)
    TIMES           reduce using rule 72 (literal -> FALSE .)
    DIV             reduce using rule 72 (literal -> FALSE .)
    MOD             reduce using rule 72 (literal -> FALSE .)
    EQ              reduce using rule 72 (literal -> FALSE .)
    NEQ             reduce using rule 72 (literal -> FALSE .)
    NGT             reduce using rule 72 (literal -> FALSE .)
    NLT             reduce using rule 72 (literal -> FALSE .)
    GT              reduce using rule 72 (literal -> FALSE .)
    LT              reduce using rule 72 (literal -> FALSE .)
    AND             reduce using rule 72 (literal -> FALSE .)
    OR              reduce using rule 72 (literal -> FALSE .)
    TERNARYIF       reduce using rule 72 (literal -> FALSE .)
    RBRACKET        reduce using rule 72 (literal -> FALSE .)
    RPAREN          reduce using rule 72 (literal -> FALSE .)
    TERNARYIFNOT    reduce using rule 72 (literal -> FALSE .)


state 36

    (10) var_specifier -> ID LBRACKET NUM . RBRACKET
    (11) var_specifier -> ID LBRACKET NUM . RBRACKET ASSIGN LBRACKET literal_seq RBRACKET

    RBRACKET        shift and go to state 43


state 37
